# cargo-polylith

./: .devenv.flake.nix  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  RELEASING.md  ROADMAP.md  VISION.md  devenv.nix  devenv.yaml
.devenv/: devenv.json  flake.json  input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
docs/: mdma-polylith-analysis.md
docs/adr/: 001-versioning-model.md  ADR-001-module-boundaries.md  ADR-002-no-cargo-metadata.md  ADR-003-explicit-interface-metadata.md  ADR-004-cargo-subcommand.md  ADR-007-humble-deviations.md  ADR-008-path-dep-aliasing.md  ADR-010-projects-as-workspace-members.md  ADR-011-mcp-single-binary.md  ADR-012-check-severity-model.md  ADR-013-polylith-profiles.md  ADR-014-profile-workspace-symlinks.md  ADR-015-polylith-toml-workspace-marker.md  ADR-016-corsett-tui-column-shortening.md
src/: cli.rs  corsett.rs  main.rs  toml_utils.rs
src/commands/: base.rs  bump.rs  check.rs  component.rs  deps.rs  edit.rs  error.rs  generate.rs  info.rs  init.rs  mcp.rs  mod.rs  profile.rs  project.rs  status.rs  validate.rs
src/output/: table.rs
src/scaffold/: claude_skill.md  error.rs  mod.rs  templates.rs
src/tui/: app.rs  grid.rs  mod.rs  ui.rs
src/workspace/: api_diff.rs  check.rs  discover.rs  error.rs  git.rs  mod.rs  model.rs  status.rs  strict_bump.rs  version.rs
tests/fixtures/poly-ws/: Cargo.toml
tests/integration/: bump_test.rs  check_test.rs  info_deps_test.rs  init_test.rs  new_component_test.rs  phase3_test.rs  profile_test.rs  status_test.rs
(+11 files in other folders)
