[package]
name = "cargo-polylith"
version = "0.2.0"
edition = "2021"
description = "Pragmatic polylith architecture tooling for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johlrogge/cargo-polylith"
readme = "README.md"
authors = ["johlrogge"]
keywords = ["polylith", "cargo", "workspace", "architecture"]
categories = ["development-tools::cargo-plugins"]

[[bin]]
name = "cargo-polylith"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# TOML parsing — cargo_toml gives a typed Cargo.toml model for free
cargo_toml = "0.20"

# TOML editing — preserves comments and formatting when writing back
toml_edit = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output
colored = "2.0"

# Filesystem traversal
walkdir = "2.5"

# Serialisation (for --json flag later)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI (edit command)
ratatui = "0.29"
crossterm = "0.28"

[[test]]
name = "init_test"
path = "tests/integration/init_test.rs"

[[test]]
name = "new_component_test"
path = "tests/integration/new_component_test.rs"

[[test]]
name = "info_deps_test"
path = "tests/integration/info_deps_test.rs"

[[test]]
name = "phase3_test"
path = "tests/integration/phase3_test.rs"

[[test]]
name = "check_test"
path = "tests/integration/check_test.rs"

[[test]]
name = "status_test"
path = "tests/integration/status_test.rs"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
